RsSDK_V1.1.17/SDKWrapper/Include/RSSDKWrapper.h


typedef void* device_id;

typedef void* session_id;


typedef enum {
    rs_not_support = -19,
    rs_no_permission = -18,
    rs_not_defined = -17,
    rs_unknown_mp4_file = -16,
    rs_hk_mp4_file = -15,
    rs_param_error = -14,
    rs_need_login_first = -13,
    rs_parse_ptz_param_error = -12,
    rs_param_page_not_found = -11,
    rs_need_input_password = -10,
    rs_file_access_error = -9,
    rs_file_not_found = -8,
    rs_record_not_found = -7,
    rs_buffer_too_small = -6,
    rs_session_not_found = -5,
    rs_device_not_found = -4,
    rs_parse_json_error = -3,
    rs_unknown_error = -2,
    rs_fail = -1,
    rs_success = 0
}rs_error_code;

/*
 * param      ---> "channel number"  : (int) 16,
 *            ---> "device name"     : "HRD-E1630L",
 *            ---> "device type"     : "HRD-E1630L",
 *            ---> "device type ull" : (uint64_t) 5932091752722990336,
 *            ---> "device version"  : "V7.1.0-20160917",
 *            ---> "dns1"            : "192.168.1.1",
 *            ---> "dns2"            : "8.8.8.8",
 *            ---> "gateway"         : "192.168.1.1",
 *            ---> "ip"              : "192.168.1.150",
 *            ---> "mac addr"        : "00-22-33-44-55-99",
 *            ---> "media port"      : (int) 9000,
 *            ---> "netmask"         : "255.255.255.0",
 *            ---> "network mode"    : "static",
 *            ---> "p2p id"          : "",
 *            ---> "web port"        : (int) 8000
 * user_param ---> value you pass to function <search_device>
 * attention  ---> if param == NULL, means search done
 */
typedef void (RSNET_CALL* search_device_callback)(const char* param, void* user_param);


/*
 * param      ---> "status" : "success"
 *                          : "connecting"
 *                          : "close"
 *                          : "unknown error"
 *                          : "user logined"
 *                          : "user or password error"
 *                          : "user no right"
 *                          : "ip filter"
 *                          : "max user"
 *                          : "user disabled"
 *                          : "force change password"
 *                          : "force close brower"
 *                          : "forbidden ip"
 *                          : "p2p mode"
 *                          : "relay mode"
 * user_param ---> value you pass to function <login>
 */
typedef void (RSNET_CALL* connction_callback)(const char* param, void* user_param);


/*
 * alarm_type ---> "MsgDevPreviewChangeReport" and so on
 * param      ---> a json value to alarm
 * user_param ---> value you pass to function <login>
 * attention  ---> you need to care about these two message, one is "RSSDKChannelStatus", the ohter
 *                 is "RSSDKAlarmStatus". The first message tell app about the status of all channels
 *                 of this device. The second message tell app about the alarm of this device
 */
typedef void (RSNET_CALL* alarm_callback)(const char* alarm_type, const char* param, void* user_param);


/*
 * param      ---> "status" : "unknown error"
 *                          : "wait login"
 *                          : "start open stream"
 *                          : "open stream success"
 *                          : "open stream failed"
 *                          : "network frame arrieved"
 *                          : "preivew closed"
 *                          : "max preivew number"
 *                          : "device playback"
 *                          : "not enough bandwidth"
 *                          : "no authority"
 *                          : "preview active failed"
 * user_param ---> value you pass to function <rs_start_preview>
 */
typedef void (RSNET_CALL* preivew_callback)(const char* param, void* user_param);


/*
* info       ---> not used right now
* user_param ---> user param
 */
typedef void (CALLBACK* draw_callback)(SDKWRAPPER_DRAW_INFO* info, void* user_param);


/*
* info       ---> see <PICTURE_RENDER_INFO>
* user_param ---> user param
 */
typedef void (CALLBACK* picture_callback)(PICTURE_RENDER_INFO* info, void* user_param);


/*
* dev          ---> (device_id) see return value of <rs_create_device>
* param        ---> "channel"     : (uin32_t) 0 1 2 3 4 and so on
*              ---> "stream type" : "main stream" "sub stream" "mobile stream"
               ---> "auto connect" : (bool) automatic reconnect or not
* window       ---> the windwow you want to show the video
* preview_cb   ---> see <preivew_callback>
* user_param   ---> user param
*/
typedef struct _preview_param_ {
    device_id             dev;
    const char*           param;
    HWND                  window;
    preivew_callback      preview_cb;
    void*                 preview_user_param;
    draw_callback         draw_cb;//draw something on the picture before render, such as line rect and picture
    picture_callback      picture_cb;//just fill NULL
    const char*           background_picture;//bmp picture, the bmp picture must be 24 bit without compression, just fill NULL
    int                   background_picture_size;//the length of background_picture, just fill 0
    char                  reserve[228];
}preview_param;


/*
* param        ---> "oem type" : "default" "tev" "zip" "cdoubles" "raydin" "hello cctv" "optimus" "hdpro"
*              ---> "start ip" : if you use udp point to point search, fill this, such as "172.18.12.1",
*                                otherwise if you use lan broadcast, just ignore this value or fill ""
*              ---> "stop ip"  : if you use udp point to point search, fill this, such as "172.18.13.255",
*                                otherwise if you use lan broadcast, just ignore this value or fill ""
* callback     ---> see <search_device_callback>
* user_param   ---> user param
* return value ---> see <rs_error_code>
*/
RSSDKWRAPPER_API rs_error_code rs_search_device(const char* param, search_device_callback callback, void* user_param);


/*
* return value ---> ( == 0) means fail, ( > 0) means deivce id
*/
RSSDKWRAPPER_API device_id rs_create_device();


/*
* device_id    ---> (int) see return value of <rs_create_device>
* return value ---> see <rs_error_code>
*/
RSSDKWRAPPER_API rs_error_code rs_destroy_device(device_id dev);


/*
* dev          ---> (device_id) see return value of <rs_create_device>
* param        ---> "ip or id"            : "192.168.1.100"
*              ---> "media port"          : (int) 9000
*              ---> "user"                : "admin"
*              ---> "password"            : "admin"
*              ---> "ddns id server addr" : "" or other
*              ---> "p2p type"            : "ip" "id" "tutk" "lorex" "vv" "rsvv" "samsung" "urmet ur" "livezon" "ddns"
*              ---> "oem type"            : "default" "tev" "zip" "cdoubles" "raydin" "hello cctv" "optimus" "hdpro"
* conn_cb      ---> see <connction_callback>
* alarm_cb     ---> see <alarm_callback>
* user_param   ---> user param
* return value ---> see <rs_error_code>
*/
RSSDKWRAPPER_API rs_error_code rs_device_login(device_id dev, const char* param, connction_callback conn_cb, alarm_callback alarm_cb, void* user_param);


/*
* dev          ---> (device_id) see return value of <rs_create_device>
* return value ---> see <rs_error_code>
*/
RSSDKWRAPPER_API rs_error_code rs_device_logout(device_id dev);


/*
* param        ---> see <preview_param>
* return value ---> ( == 0) means fail, ( > 0) means session id
*/
RSSDKWRAPPER_API session_id rs_start_preview(const preview_param* param);


/*
* sess         ---> (session_id) see return value of <rs_start_preview>
* return value ---> see <rs_error_code>
*/
RSSDKWRAPPER_API rs_error_code rs_stop_preview(session_id sess);